Update splash page to fix right align of latest release.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10730,6 +10730,11 @@ footer .social-media .social-icon.circle img {
   min-height: 100vh;
   padding-bottom: 3rem;
 }
+.splash-container .inner {
+  max-width: 600px;
+  position: relative;
+  margin: 0 auto;
+}
 .splash-container h1, .splash-container h2, .splash-container h3 {
   color: white;
   position: relative;
@@ -10778,7 +10783,6 @@ footer .social-media .social-icon.circle img {
   grid-template-columns: 0.6fr 1fr 1.4fr 1fr;
   font-family: AvenirCondensedHand, Arial, sans-serif;
   font-size: 28px;
-  max-width: 600px;
   margin: 0 auto;
   width: 100%;
 }
@@ -10792,37 +10796,8 @@ footer .social-media .social-icon.circle img {
   text-decoration: none;
   color: #e60000;
 }
-.splash-container .logos-container {
-  min-height: 7.5rem;
-  align-items: center;
-  justify-content: space-around;
-  position: relative;
-  max-width: 500px;
-  z-index: 10;
-  display: flex;
-  width: 28%;
-}
-@media screen and (min-width: 0) and (max-width: 625px) {
-  .splash-container .logos-container {
-    justify-content: center;
-    width: 100%;
-  }
-}
-.splash-container .logos-container img {
-  height: 75px;
-  width: 187.5px;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-@media screen and (min-width: 0) and (max-width: 625px) {
-  .splash-container .logos-container img {
-    height: 50px;
-    width: 123.75px;
-  }
-}
 .splash-container .title-bar,
 .splash-container .tour-logo {
-  max-width: 600px;
   margin: 0 auto;
   width: 100%;
 }
@@ -10834,8 +10809,8 @@ footer .social-media .social-icon.circle img {
   width: 60%;
 }
 .splash-container .latest-release {
-  position: fixed;
-  right: 0;
+  position: absolute;
+  right: -275px;
   top: 0;
   padding-top: 3rem;
 }
@@ -10843,7 +10818,8 @@ footer .social-media .social-icon.circle img {
   font-size: 2rem;
 }
 .splash-container .latest-release img {
-  width: 50%;
+  width: 250px;
+  height: 250px;
 }
 .splash-container .latest-release:hover img {
   box-shadow: 7px 7px 15px 1px rgba(255, 255, 255, 0.4);
@@ -10883,8 +10859,8 @@ footer .social-media .social-icon.circle img {
   .splash-container .latest-release {
     position: relative;
     padding: 0 1rem;
-    max-width: 600px;
     margin: 0 auto;
+    right: 0;
     width: 100%;
   }
   .splash-container .latest-release img {
@@ -10892,6 +10868,7 @@ footer .social-media .social-icon.circle img {
     text-align: center;
     margin: 0 auto;
     width: 90%;
+    height: auto;
   }
   .splash-container .latest-release:hover img {
     box-shadow: none;
